css/main.css
/* ... */
.pink_filter_btn_rollover{
    padding:6px 13px 4px 13px;
    margin-bottom:10px;
}

#filter_instagram_btn{
	margin-top:0;
	padding:6px 13px 4px 13px;
}

.view_circle_btn{
		padding:10px 35px 10px 35px;
	}

.pink_text{
	color:#f38dab;
}

.blue_btn{
	background-color:#3f7098;
}

.light_blue_btn{
	background-color:#00cffb;
}

.auto_resize{
	max-width:100%;
	height:auto;
	width: auto\9; /* ie8 */
}

.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus,
.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
    background-color: #e8e8e8;
    background-image: none;
    color: #333;
    outline: 0 none;
    text-decoration: none;
}


#language_menu.dropdown-menu {
	font-family: Arial, 'Arial', arial, sans-serif;
	font-size: 1em;
}

#language_menu.dropdown-menu a{
	text-decoration: underline;
	color:#333;	
}

#language_menu.dropdown-menu a:hover{
	color:#f38dab;
}

#language_menu.dropdown-menu img{
	margin-top:1px;
}

#language_menu.dropdown-menu li div{
	min-width: 220px;
	height:20px;
	margin: 2px 20px;
}

#language_menu.dropdown-menu li span{
	display: inline-block;
}

#language_menu .country{
	color:#9c9c9c;
}

#language_menu .language{
	text-decoration: underline;
	color:#333;
}

#language_menu .language_divider{
	color:#333;	
	
}

.language_divider{
	margin: 0 5px 0 5px;
}

.country_flag{
	margin-top:-3px;
}



/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Image replacement
 */

.ir {
    background-color: transparent;
    border: 0;
    overflow: hidden;
    /* IE 6/7 fallback */
    *text-indent: -9999px;
}

.ir:before {
    content: "";
    display: block;
    width: 0;
    height: 100%;
}

/*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */

.hidden {
    display: none !important;
    visibility: hidden;
}

/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   Theses examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */
  

/*@media only screen and (min-width: 580px) {
  
}*/

/*@media only screen and (min-width: 760px) {

}*/


/*@media only screen and (min-width: 35em) {
    Style adjustments for viewports that meet the condition 
}

@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
       only screen and (min-resolution: 144dpi) {
     Style adjustments for high resolution devices 
}*/

/* ==========================================================================
   Print styles.
   Inlined to avoid required HTTP connection: h5bp.com/r
   ========================================================================== */

@media print {
    * {
        background: transparent !important;
        color: #000 !important; /* Black prints faster: h5bp.com/s */
        box-shadow:none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links for images, or javascript/internal links
     */

    .ir a:after,
    a[href^="javascript:"]:after,
    a[href^="#"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group; /* h5bp.com/t */
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    @page {
        margin: 0.5cm;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

